# DGXTest

./: .gitignore  README.md  agent.md  development_implementation_checklist.md  progress_handoff.json  progress_handoff.md  pyproject.toml  run.ps1  site.dwg  tmp_esc_test.txt  tmp_esc_test2.txt  tmp_ps_unicode_repr.txt  tmp_unicode_test.txt
configs/: dgx_demo_complete_example_cn.dryrun.json  live_run_config.example.json  prod_run_config.json  run_config.json
docs/: README.md  architecture.md  development-plan.md
docs/guides/: development-guidelines.md  quick-start-5-minutes.md  usage-guide.md
docs/scenarios/: dgx_demo_recorded_cases.md
docs/status/: handoff.json  handoff.md
excels/: dgx_demo_complete_example_cn.xlsx  test_suite_template.xlsx
object_repo/: dgx_demo_object_repository_cn.xlsx  object_repository_template.xlsx
outputs/ai-bug-handoff/: SKILL.md
src/: __init__.py  main.py
src/actions/: __init__.py  executor.py
src/artifacts/: __init__.py  collector.py
src/asserts/: __init__.py  executor.py
src/bugs/: __init__.py  bug_analyzer.py
src/core/: __init__.py  app.py  bootstrap.py
src/objects/: __init__.py  playwright_locator.py  resolver.py
src/parser/: __init__.py  config_loader.py  excel_parser.py  models.py  template_generator.py
src/reports/: __init__.py  report_generator.py
templates/: dgx_demo_codegen.py  dgx_demo_recorded_cases.md
tests/: test_ai_bug_handoff_output.py  test_artifact_collection.py  test_config_loader.py  test_excel_parser.py  test_execution_support.py  test_main.py
tmp/: dgx_demo_codegen.py
(+16 files in other folders)
