[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgx-web-auto-test"
version = "0.1.0"
description = "基于 Playwright + Python 的 Web 自动化测试骨架项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.48,<2.0",
  "openpyxl>=3.1,<4.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
